# AdventOfCode

./: requirements.txt  workspace.code-workspace
1/: go.py
2/: go.py
2020/AoC_2020/: .project  Cargo.toml
2020/AoC_2020/src/: d01_1.rs  d01_2.rs  d02_1.rs  d02_2.rs  d03_1.rs  d03_2.rs  d04_1.rs  d04_2.rs  d05_1.rs  d18_1.rs  main.rs
3/: go.py
4/: go.py
5/: go.py
6/: go.py
