[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Geoff Yoerger <geoffreyiy1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"

[dependencies.reqwest]
version = "0.10.9"
features = ["blocking"]
